# Conways-Game-of-Life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
positions/scripts/: customPos.py  printPos.py  randomPos.py
src/: exceptions.hpp  gui.hpp  main.cpp  position.cpp  position.hpp  serialization.cpp  serialization.hpp  settingsdata.hpp
src/gui/: configmenu.cpp  configmenu.hpp  drawingpanel.hpp  fieldspanel.cpp  fieldspanel.hpp  gameframe.cpp  gameframe.hpp
src/tomlconfig/: settingsdata.hpp
tests/: CMakeLists.txt  Settings.cmake
tests/processing/: CMakeLists.txt  processing.cpp
tests/toml_parsing/: CMakeLists.txt  toml_parsing.cpp
